--- a/Proyecto1/WebContent/cssCubrir/indexModificarFecha.css
+++ b/Proyecto1/WebContent/cssCubrir/indexModificarFecha.css
@@ -13,8 +13,6 @@ h1 {
 	text-align: center;		
 }
 
-
-
 .boton {
 	background: purple;
 	border-style: none;
@@ -23,10 +21,8 @@ h1 {
 	border-radius: 1em;
 	border: 3px double;
 	color: white;
-	/*margin-bottom: 20px;*/
 	cursor: pointer;
-	box-shadow: 2px 2px 5px #999;
-		
+	box-shadow: 2px 2px 5px #999;		
 }
 
 .boton:hover {
@@ -49,4 +45,11 @@ h1 {
 	position: absolute;
 	left: 650;
 	top: 220px;
+}
+
+#InicioCRUD {
+	position: absolute;
+	left: 650px;
+	top: 220px;
+	
 }
