corregido el color de la ultima fila de la tabla cubir 24 horas

--- a/Proyecto1/WebContent/cssCubrir/EstiloJSP1.css
+++ b/Proyecto1/WebContent/cssCubrir/EstiloJSP1.css
@@ -37,8 +37,7 @@ table tr:nth-child(2) {
 	background-color: #f00;
 }
 
-table tr:nth-child(62) {	
-	margin: 0 auto;	
+table tr:last-child {
 	background-color: pink;
 }
 
